[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-glinet"
version = "1.0.0"
description = "Unified GL-INet Home Assistant integration with bundled API client"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Vithurshan Selvarajah" },
]
dependencies = [
    "homeassistant>=2025.1.0",
    "passlib>=1.7.4",
    "pytest>=8.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
