[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-glinet"
version = "1.2.0"
description = "Unified GL-INet Home Assistant integration with bundled API client"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Vithurshan Selvarajah" },
]
dependencies = [
    "homeassistant>=2026.5.0",
    "passlib>=1.7.4",
    "pytest>=9.0.3",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
