[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glinet-router"
version = "1.6.0"
description = "Unified GL.iNet Router Home Assistant integration with bundled API client"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Vithurshan Selvarajah" },
]
dependencies = [
    "homeassistant>=2026.5.0",
    "passlib>=1.7.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.0",
    "aioresponses>=0.7.7",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
